tests/golden/errors/unsupported_import.py
import does_not_exist_anywhere

print("unreachable")
